data/derived/sp14/progs/unify/prog4016.ml.out
Characters 83-95:
  and y = reverseInt n mod 10 in 
          ^^^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
